--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,32 @@
-plugins {
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.2.51'
-}
-
-group 'info.juanmendez.rxrecipes'
+group 'info.juanmendez.rxstories'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+buildscript {
+    ext.kotlin_version = "1.2.51"
+    ext.rx_java_version = "2.1.16"
+    ext.rx_kotlin_version = "2.2.0"
+
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+}
+
+apply plugin: 'kotlin'
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "io.reactivex.rxjava2:rxjava:2.1.12"
+    compile "io.reactivex:rxkotlin:2.2.0"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile "org.mockito:mockito-core:2.10"
 }
 
 compileKotlin {
