chp1: empty/cache/never

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     compile "io.reactivex.rxjava2:rxjava:$rx_java_version"
     compile "io.reactivex:rxkotlin:$rx_kotlin_version"
-    compile "com.jakewharton.rxrelay2:rxrelay:$rx_kotlin_version"
+    compile "com.jakewharton.rxrelay2:rxrelay:2.0.0"
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile "org.mockito:mockito-core:2.10"
