--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,13 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    compile "io.reactivex.rxjava2:rxjava:$rx_java_version"
-    compile "io.reactivex:rxkotlin:$rx_kotlin_version"
-    compile "com.jakewharton.rxrelay2:rxrelay:2.0.0"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "io.reactivex.rxjava2:rxjava:$rx_java_version"
+    implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
+    implementation "com.jakewharton.rxrelay2:rxrelay:2.0.0"
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    testCompile "org.mockito:mockito-core:2.10"
+    testImplementation 'junit:junit:4.12'
+    testImplementation 'org.mockito:mockito-core:2.23.0'
 }
 
 compileKotlin {
